--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <div class="card-icon">💉</div>
         <h3>Cancer & Infusion Therapy</h3>
         <p>
-          Chemotherapy, radiation, and infusion treatments with recurring
-          visits to the same care center.
+          Chemotherapy and infusion treatments with recurring visits
+          to the same oncology or infusion center.
         </p>
       </div>
 
@@ -74,11 +74,11 @@
       </div>
 
       <div class="service-card blue">
-        <div class="card-icon">🧪</div>
-        <h3>Infusion Therapy</h3>
+        <div class="card-icon">☢️</div>
+        <h3>Radiation Therapy</h3>
         <p>
-          Ongoing infusion treatments for chronic conditions with
-          predictable schedules at dedicated centers.
+          Daily treatments over multiple weeks at the same oncology center,
+          where consistent, on-time transportation is critical.
         </p>
       </div>
 
@@ -122,11 +122,13 @@
 
       <div class="founder-content">
         <h2>Built Around Showing Up</h2>
+
         <p class="founder-lead">
           Care Mobility exists because too many seniors were missing or
           stressing over essential medical appointments — not because
           care wasn’t available, but because dependable transportation wasn’t.
         </p>
+
         <p>
           Care Mobility was built to be different. Familiar drivers.
           Consistent schedules. Accountability you can count on —
