--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>Care Mobility Support Services</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="assets/cm-favicon.png" />
+  <link rel="icon" href="/assets/cm-favicon.png" type="image/png" />
+  <link rel="shortcut icon" href="/assets/cm-favicon.png" type="image/png" />
+  <link rel="apple-touch-icon" href="/assets/cm-favicon.png" />
 
   <!-- Styles -->
   <link rel="stylesheet" href="styles.css" />
@@ -106,6 +108,73 @@
         src="assets/senior-assist.jpg"
         alt="Senior receiving assistance entering a vehicle"
       />
+    </div>
+  </section>
+
+  <!-- RIDESHARE COMPARISON -->
+  <section class="rideshare">
+    <div class="rideshare-inner">
+      <h2>Why Rideshare Isn’t Built for Recurring Medical Care</h2>
+
+      <p class="rideshare-intro">
+        Services like Uber and Lyft can be convenient and lower cost for
+        everyday transportation. But for recurring medical appointments
+        with strict schedules, rideshare options often fall short.
+      </p>
+
+      <div class="rideshare-grid">
+        <div class="rideshare-item">
+          <h3>Reliability</h3>
+          <p>
+            Rideshare availability depends on driver supply at the moment
+            a ride is requested. For time-sensitive medical appointments,
+            this uncertainty can create stress or missed care.
+          </p>
+        </div>
+
+        <div class="rideshare-item">
+          <h3>Punctuality</h3>
+          <p>
+            Appointment pickups require precision. Rideshare ETAs can
+            change due to traffic, cancellations, or last-minute driver
+            reassignment.
+          </p>
+        </div>
+
+        <div class="rideshare-item">
+          <h3>Different Drivers Every Time</h3>
+          <p>
+            Each trip may involve a new driver unfamiliar with the patient,
+            routine, or clinic location.
+          </p>
+        </div>
+
+        <div class="rideshare-item">
+          <h3>Different Vehicles</h3>
+          <p>
+            Vehicle size, comfort, and ease of entry vary from ride to
+            ride, which matters for patients with mobility challenges.
+          </p>
+        </div>
+
+        <div class="rideshare-item">
+          <h3>Lower Cost, Lower Consistency</h3>
+          <p>
+            Rideshare may be less expensive for one-off trips, but that
+            lower price often comes with less predictability and
+            accountability over time.
+          </p>
+        </div>
+
+        <div class="rideshare-item highlight">
+          <h3>How Care Mobility Is Different</h3>
+          <p>
+            Care Mobility is built specifically for recurring medical care:
+            familiar drivers, consistent schedules, and accountability you
+            can rely on week after week.
+          </p>
+        </div>
+      </div>
     </div>
   </section>
 
