--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="shortcut icon" href="/assets/cm-favicon.png" type="image/png" />
   <link rel="apple-touch-icon" href="/assets/cm-favicon.png" />
 
-  <!-- Styles -->
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -29,10 +28,7 @@
     </div>
 
     <div class="hero-image">
-      <img
-        src="assets/grandmadialysis.jpg"
-        alt="Senior being transported to a dialysis appointment"
-      />
+      <img src="assets/grandmadialysis.jpg" alt="Dialysis transportation" />
     </div>
   </section>
 
@@ -51,128 +47,91 @@
       <div class="service-card blue">
         <div class="card-icon">🩺</div>
         <h3>Dialysis</h3>
-        <p>
-          Predictable, time-sensitive treatments multiple times per week.
-          Transportation must be reliable and consistent.
-        </p>
+        <p>Time-sensitive treatments multiple times per week.</p>
       </div>
 
       <div class="service-card peach">
         <div class="card-icon">💉</div>
         <h3>Cancer & Infusion Therapy</h3>
-        <p>
-          Chemotherapy and infusion treatments with recurring visits
-          to the same oncology or infusion center.
-        </p>
+        <p>Recurring oncology and infusion center visits.</p>
       </div>
 
       <div class="service-card green">
         <div class="card-icon">♿</div>
         <h3>Rehabilitation & Therapy</h3>
-        <p>
-          Physical, occupational, speech, and pulmonary therapy requiring
-          repeat clinic visits over weeks or months.
-        </p>
+        <p>PT, OT, speech, and pulmonary therapy.</p>
       </div>
 
       <div class="service-card blue">
         <div class="card-icon">☢️</div>
         <h3>Radiation Therapy</h3>
-        <p>
-          Daily treatments over multiple weeks at the same oncology center,
-          where consistent, on-time transportation is critical.
-        </p>
+        <p>Daily treatments requiring precise scheduling.</p>
       </div>
 
       <div class="service-card peach">
         <div class="card-icon">🤝</div>
         <h3>Substance Use Treatment</h3>
-        <p>
-          Dependable transportation for outpatient treatment programs
-          where consistent attendance is essential.
-        </p>
+        <p>Consistent attendance for outpatient programs.</p>
       </div>
 
       <div class="service-card green">
         <div class="card-icon">🏥</div>
         <h3>Post-Op Rehab</h3>
-        <p>
-          Recovery after surgery often requires multiple weekly visits
-          to the same rehabilitation facility.
-        </p>
+        <p>Ongoing recovery visits after surgery.</p>
       </div>
     </div>
 
     <div class="services-image">
-      <img
-        src="assets/senior-assist.jpg"
-        alt="Senior receiving assistance entering a vehicle"
-      />
+      <img src="assets/senior-assist.jpg" alt="Senior assistance" />
     </div>
   </section>
 
-  <!-- RIDESHARE COMPARISON -->
+  <!-- RIDESHARE -->
   <section class="rideshare">
     <div class="rideshare-inner">
-      <h2>Why Rideshare Isn’t Built for Recurring Medical Care</h2>
+      <h2>Care Mobility vs Rideshare</h2>
 
       <p class="rideshare-intro">
-        Services like Uber and Lyft can be convenient and lower cost for
-        everyday transportation. But for recurring medical appointments
-        with strict schedules, rideshare options often fall short.
+        Uber and Lyft can be convenient and lower cost for everyday trips.
+        For recurring medical care, reliability and consistency matter more.
       </p>
 
-      <div class="rideshare-grid">
-        <div class="rideshare-item">
-          <h3>Reliability</h3>
-          <p>
-            Rideshare availability depends on driver supply at the moment
-            a ride is requested. For time-sensitive medical appointments,
-            this uncertainty can create stress or missed care.
-          </p>
+      <!-- COMPARISON TABLE -->
+      <div class="comparison-table">
+        <div class="comparison-header">
+          <div></div>
+          <div>Care Mobility</div>
+          <div>Uber / Lyft</div>
         </div>
 
-        <div class="rideshare-item">
-          <h3>Punctuality</h3>
-          <p>
-            Appointment pickups require precision. Rideshare ETAs can
-            change due to traffic, cancellations, or last-minute driver
-            reassignment.
-          </p>
+        <div class="comparison-row">
+          <div class="label">Built for recurring medical care</div>
+          <div class="yes">✓</div>
+          <div class="no">✕</div>
         </div>
 
-        <div class="rideshare-item">
-          <h3>Different Drivers Every Time</h3>
-          <p>
-            Each trip may involve a new driver unfamiliar with the patient,
-            routine, or clinic location.
-          </p>
+        <div class="comparison-row">
+          <div class="label">Same driver over time</div>
+          <div class="yes">✓</div>
+          <div class="no">✕</div>
         </div>
 
-        <div class="rideshare-item">
-          <h3>Different Vehicles</h3>
-          <p>
-            Vehicle size, comfort, and ease of entry vary from ride to
-            ride, which matters for patients with mobility challenges.
-          </p>
+        <div class="comparison-row">
+          <div class="label">Consistent vehicle type</div>
+          <div class="yes">✓</div>
+          <div class="no">✕</div>
         </div>
 
-        <div class="rideshare-item">
-          <h3>Lower Cost, Lower Consistency</h3>
-          <p>
-            Rideshare may be less expensive for one-off trips, but that
-            lower price often comes with less predictability and
-            accountability over time.
-          </p>
+        <div class="comparison-row">
+          <div class="label">Scheduled, predictable pickups</div>
+          <div class="yes">✓</div>
+          <div class="no">✕</div>
         </div>
 
-        <div class="rideshare-item highlight">
-          <h3>How Care Mobility Is Different</h3>
-          <p>
-            Care Mobility is built specifically for recurring medical care:
-            familiar drivers, consistent schedules, and accountability you
-            can rely on week after week.
-          </p>
+        <div class="comparison-row">
+          <div class="label">Lower cost for one-off trips</div>
+          <div class="no">✕</div>
+          <div class="yes">✓</div>
         </div>
       </div>
     </div>
@@ -181,27 +140,16 @@
   <!-- FOUNDER -->
   <section class="founder-section">
     <div class="founder-inner">
-      <div class="founder-photo-wrap">
-        <img
-          src="assets/daniel.jpg"
-          alt="Daniel Shim"
-          class="founder-photo"
-        />
-      </div>
-
+      <img src="assets/daniel.jpg" class="founder-photo" alt="Founder" />
       <div class="founder-content">
         <h2>Built Around Showing Up</h2>
-
-        <p class="founder-lead">
-          Care Mobility exists because too many seniors were missing or
-          stressing over essential medical appointments — not because
-          care wasn’t available, but because dependable transportation wasn’t.
-        </p>
-
         <p>
-          Care Mobility was built to be different. Familiar drivers.
-          Consistent schedules. Accountability you can count on —
-          week after week.
+          Care Mobility exists because dependable transportation was
+          missing for seniors who needed it most.
+        </p>
+        <p>
+          Familiar drivers. Consistent schedules. Accountability you
+          can count on week after week.
         </p>
       </div>
     </div>
@@ -210,42 +158,24 @@
   <!-- CONTACT -->
   <section class="contact">
     <div class="contact-inner">
-
       <div class="phone-cta">
         <p>Prefer to speak with someone now?</p>
         <a href="tel:16178216429">(617) 821-6429</a>
       </div>
 
-      <h2>Request Transportation or Learn More</h2>
-
-      <form
-        name="contact"
-        method="POST"
-        data-netlify="true"
-        netlify-honeypot="bot-field"
-      >
+      <form name="contact" method="POST" data-netlify="true">
         <input type="hidden" name="form-name" value="contact" />
-        <input type="hidden" name="bot-field" />
         <input type="hidden" name="redirect" value="/thanks.html" />
 
         <input type="text" name="name" placeholder="Your name" required />
         <input type="email" name="email" placeholder="Email address" required />
-        <input type="tel" name="phone" placeholder="Phone number" />
-        <textarea
-          name="message"
-          rows="4"
-          placeholder="Tell us about the transportation needs"
-          required
-        ></textarea>
-
+        <textarea name="message" rows="4" placeholder="How can we help?" required></textarea>
         <button type="submit">Submit</button>
       </form>
 
       <p class="hipaa-disclaimer">
-        Please do not include medical diagnoses or protected health
-        information (PHI) in this form.
+        Please do not include medical diagnoses or protected health information.
       </p>
-
     </div>
   </section>
 
