--- a/index.html
+++ b/index.html
@@ -110,16 +110,15 @@
     </div>
   </section>
 
-  <!-- RIDESHARE COMPARISON -->
+  <!-- RIDESHARE -->
   <section class="rideshare">
     <div class="rideshare-inner">
       <h2>Care Mobility vs Rideshare</h2>
 
       <p class="rideshare-intro">
-        Rideshare services can work well for one-off trips. But when
-        transportation is needed again and again — often multiple times
-        each week — reliability, familiarity, and routine matter more
-        than convenience.
+        Rideshare services can work for one-off trips. But when
+        transportation is needed again and again — often multiple
+        times each week — reliability, familiarity, and routine matter more.
       </p>
 
       <div class="comparison-table">
@@ -238,3 +237,4 @@
 
 </body>
 </html>
+
