--- a/index.html
+++ b/index.html
@@ -3,262 +3,126 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Care Mobility Support Services</title>
+  <title>Care Mobility</title>
 
-  <!-- Favicon -->
   <link rel="icon" href="/assets/cm-favicon.png" type="image/png" />
-  <link rel="shortcut icon" href="/assets/cm-favicon.png" type="image/png" />
-  <link rel="apple-touch-icon" href="/assets/cm-favicon.png" />
-
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-  <!-- HERO -->
-  <section class="hero">
-    <div class="hero-copy">
-      <h1 class="hero-title">
-        Reliable transportation<br />
-        for recurring medical care.
-      </h1>
-      <p class="hero-subtitle">
-        Consistent, dependable rides for seniors and patients with
-        ongoing medical appointments.
-      </p>
-    </div>
-
-    <div class="hero-image">
-      <img
-        src="assets/grandmadialysis.jpg"
-        alt="Senior being transported to a dialysis appointment"
-      />
-    </div>
-  </section>
-
-  <!-- SERVICES -->
-  <section class="services">
-    <div class="services-header">
-      <h2>Recurring Medical Transportation, Done Right.</h2>
+<!-- HERO -->
+<section class="hero">
+  <div class="container hero-grid">
+    <div>
+      <h1>Reliable transportation<br>for recurring medical care</h1>
       <p>
-        Many seniors and patients rely on transportation not just once,
-        but multiple times each week. When reliability breaks down,
-        the impact compounds appointment after appointment.
+        Consistent, dependable rides for seniors and patients with ongoing
+        medical appointments.
       </p>
     </div>
+    <img src="assets/grandmadialysis.jpg" alt="Senior transportation">
+  </div>
+</section>
 
-    <div class="service-cards">
-      <div class="service-card blue">
-        <div class="card-icon">🩺</div>
-        <h3>Dialysis</h3>
-        <p>
-          Time-sensitive treatments multiple times per week where
-          consistency and punctuality are critical.
-        </p>
+<!-- SERVICES -->
+<section class="services container">
+  <h2>Recurring Medical Transportation, Done Right</h2>
+
+  <div class="cards">
+    <div class="card">🩺 <strong>Dialysis</strong><br>Multiple weekly treatments where timing matters.</div>
+    <div class="card">💉 <strong>Cancer & Infusion</strong><br>Long-term therapy at the same care center.</div>
+    <div class="card">♿ <strong>Rehab & Therapy</strong><br>Physical, occupational, and speech therapy.</div>
+    <div class="card">☢️ <strong>Radiation Therapy</strong><br>Daily treatments requiring consistency.</div>
+    <div class="card">🤝 <strong>Substance Use Care</strong><br>Outpatient programs that depend on routine.</div>
+    <div class="card">🏥 <strong>Post-Op Rehab</strong><br>Recovery visits after surgery.</div>
+  </div>
+</section>
+
+<!-- SINGLE COMPARISON TABLE -->
+<section class="comparison">
+  <div class="container">
+    <h2>How Care Mobility Compares</h2>
+
+    <div class="comparison-table">
+      <div class="row header">
+        <div></div>
+        <div>Care Mobility</div>
+        <div>Rideshare<br>(Uber / Lyft)</div>
+        <div>Traditional Medical<br>Transport</div>
       </div>
 
-      <div class="service-card peach">
-        <div class="card-icon">💉</div>
-        <h3>Cancer & Infusion Therapy</h3>
-        <p>
-          Recurring oncology and infusion appointments at the same
-          care centers over extended periods.
-        </p>
+      <div class="row">
+        <div>Built for recurring medical care</div>
+        <div class="yes">✓</div>
+        <div class="no">✕</div>
+        <div class="no">✕</div>
       </div>
 
-      <div class="service-card green">
-        <div class="card-icon">♿</div>
-        <h3>Rehabilitation & Therapy</h3>
-        <p>
-          Physical, occupational, speech, and pulmonary therapy
-          requiring repeat visits week after week.
-        </p>
+      <div class="row">
+        <div>Same driver over time</div>
+        <div class="yes">✓</div>
+        <div class="no">✕</div>
+        <div class="no">✕</div>
       </div>
 
-      <div class="service-card blue">
-        <div class="card-icon">☢️</div>
-        <h3>Radiation Therapy</h3>
-        <p>
-          Daily treatments over multiple weeks where even small delays
-          can disrupt care schedules.
-        </p>
+      <div class="row">
+        <div>Predictable pickup times</div>
+        <div class="yes">✓</div>
+        <div class="no">✕</div>
+        <div class="no">✕</div>
       </div>
 
-      <div class="service-card peach">
-        <div class="card-icon">🤝</div>
-        <h3>Substance Use Treatment</h3>
-        <p>
-          Outpatient programs that depend on consistent attendance
-          and reliable transportation routines.
-        </p>
+      <div class="row">
+        <div>Direct, non-shared rides</div>
+        <div class="yes">✓</div>
+        <div class="no">✓</div>
+        <div class="no">✕</div>
       </div>
 
-      <div class="service-card green">
-        <div class="card-icon">🏥</div>
-        <h3>Post-Op Rehab</h3>
-        <p>
-          Recovery after surgery often involves multiple weekly visits
-          to the same rehabilitation facility.
-        </p>
+      <div class="row">
+        <div>Patient-first experience</div>
+        <div class="yes">✓</div>
+        <div class="no">✕</div>
+        <div class="no">✕</div>
       </div>
     </div>
+  </div>
+</section>
 
-    <div class="services-image">
-      <img
-        src="assets/senior-assist.jpg"
-        alt="Senior receiving assistance entering a vehicle"
-      />
-    </div>
-  </section>
-
-  <!-- COMPARISON: RIDESHARE -->
-  <section class="comparison-section">
-    <div class="comparison-inner">
-      <h2>Care Mobility vs Uber / Lyft</h2>
-
-      <p class="comparison-intro">
-        Rideshare services can work for one-off trips. But when transportation
-        is needed again and again, consistency, familiarity, and predictability
-        matter far more.
+<!-- FOUNDER -->
+<section class="founder">
+  <div class="container founder-grid">
+    <img src="assets/daniel.jpg" alt="Founder">
+    <div>
+      <h2>Built Around Showing Up</h2>
+      <p>
+        Care Mobility exists because many seniors weren’t struggling with
+        a single ride. They were struggling with the same ride, over and
+        over again.
       </p>
-
-      <div class="comparison-table">
-        <div class="comparison-header">
-          <div></div>
-          <div>Care Mobility</div>
-          <div>Uber / Lyft</div>
-        </div>
-
-        <div class="comparison-row">
-          <div class="label">Built for recurring medical care</div>
-          <div class="yes">✓</div>
-          <div class="no">✕</div>
-        </div>
-
-        <div class="comparison-row">
-          <div class="label">Same driver over time</div>
-          <div class="yes">✓</div>
-          <div class="no">✕</div>
-        </div>
-
-        <div class="comparison-row">
-          <div class="label">Consistent vehicle type</div>
-          <div class="yes">✓</div>
-          <div class="no">✕</div>
-        </div>
-
-        <div class="comparison-row">
-          <div class="label">Scheduled, predictable pickups</div>
-          <div class="yes">✓</div>
-          <div class="no">✕</div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- COMPARISON: MEDICAL TRANSPORT -->
-  <section class="comparison-section light">
-    <div class="comparison-inner">
-      <h2>Care Mobility vs Traditional Medical Transportation</h2>
-
-      <p class="comparison-intro">
-        Traditional medical and Medicare transportation services are designed
-        for system efficiency. Care Mobility is designed around the patient
-        experience.
-      </p>
-
-      <div class="comparison-table">
-        <div class="comparison-header">
-          <div></div>
-          <div>Care Mobility</div>
-          <div>Traditional Medical Transport</div>
-        </div>
-
-        <div class="comparison-row">
-          <div class="label">Patient-selected pickup times</div>
-          <div class="yes">✓</div>
-          <div class="no">✕</div>
-        </div>
-
-        <div class="comparison-row">
-          <div class="label">Minimal wait times</div>
-          <div class="yes">✓</div>
-          <div class="no">✕</div>
-        </div>
-
-        <div class="comparison-row">
-          <div class="label">Direct, non-shared rides</div>
-          <div class="yes">✓</div>
-          <div class="no">✕</div>
-        </div>
-
-        <div class="comparison-row">
-          <div class="label">Same driver and routine</div>
-          <div class="yes">✓</div>
-          <div class="no">✕</div>
-        </div>
-
-        <div class="comparison-row">
-          <div class="label">Private-pay flexibility</div>
-          <div class="yes">✓</div>
-          <div class="no">✕</div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- FOUNDER -->
-  <section class="founder-section">
-    <div class="founder-inner">
-      <img src="assets/daniel.jpg" alt="Daniel Shim" class="founder-photo" />
-
-      <div class="founder-content">
-        <h2>Built Around Showing Up</h2>
-
-        <p class="founder-lead">
-          Care Mobility exists because many seniors weren’t struggling
-          with a single ride. They were struggling with the same ride,
-          over and over again.
-        </p>
-
-        <p>
-          Familiar drivers, predictable pickup times, and dependable
-          routines mean patients and families can count on the same
-          experience every time.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <!-- CONTACT -->
-  <section class="contact">
-    <div class="contact-inner">
-      <div class="phone-cta">
-        <p>Prefer to speak with someone now?</p>
-        <a href="tel:16178216429">(617) 821-6429</a>
-      </div>
-
-      <h2>Request Transportation or Learn More</h2>
-
-      <form name="contact" method="POST" data-netlify="true">
-        <input type="hidden" name="form-name" value="contact" />
-        <input type="text" name="name" placeholder="Your name" required />
-        <input type="email" name="email" placeholder="Email address" required />
-        <input type="tel" name="phone" placeholder="Phone number" />
-        <textarea
-          name="message"
-          rows="4"
-          placeholder="Tell us about the transportation needs"
-          required
-        ></textarea>
-        <button type="submit">Submit</button>
-      </form>
-
-      <p class="hipaa-disclaimer">
-        Please do not include medical diagnoses or protected health
-        information (PHI) in this form.
+      <p>
+        Familiar drivers and predictable routines make recurring care
+        easier for patients and families.
       </p>
     </div>
-  </section>
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section class="contact">
+  <div class="container">
+    <h2>Request Transportation</h2>
+    <a class="phone" href="tel:16178216429">(617) 821-6429</a>
+
+    <form name="contact" method="POST" data-netlify="true">
+      <input type="hidden" name="form-name" value="contact">
+      <input type="text" name="name" placeholder="Name" required>
+      <input type="email" name="email" placeholder="Email" required>
+      <textarea name="message" placeholder="Transportation needs" required></textarea>
+      <button type="submit">Submit</button>
+    </form>
+  </div>
+</section>
 
 </body>
 </html>
